--- a/tes.html
+++ b/tes.html
@@ -93,7 +93,12 @@ a#dynamicUrl:hover {
   const dynamicUrl = document.getElementById("dynamicUrl");
 
   fetch(proxyListUrl)
-    .then(response => response.text())
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Failed to load proxy list');
+      }
+      return response.text();
+    })
     .then(data => {
       const allProxies = data.split("\n").filter(line => line.trim() !== "");
       let filteredProxies = [...allProxies];
@@ -101,10 +106,13 @@ a#dynamicUrl:hover {
       const renderTable = () => {
         proxyTable.innerHTML = "";
         filteredProxies.forEach(proxy => {
-          const [ip, port, id, isp] = proxy.split(",");
-          const row = document.createElement("tr");
-          row.innerHTML = `<td>${ip}</td><td>${port}</td><td>${id}</td><td>${isp}</td>`;
-          proxyTable.appendChild(row);
+          const parts = proxy.split(",");
+          if (parts.length === 4) { // Ensure that the proxy has 4 components
+            const [ip, port, id, isp] = parts;
+            const row = document.createElement("tr");
+            row.innerHTML = `<td>${ip}</td><td>${port}</td><td>${id}</td><td>${isp}</td>`;
+            proxyTable.appendChild(row);
+          }
         });
 
         // Generate dynamic URL if country code filter is applied
@@ -134,6 +142,7 @@ a#dynamicUrl:hover {
     })
     .catch(error => console.error("Error fetching proxies:", error));
 });
+
 
   </script>
 </body>
