--- a/tes.html
+++ b/tes.html
@@ -679,9 +679,8 @@ body {
   <header>
   
     </header>
-  <div class="quantum-container">
-        <div class="quantum-card">
-          <h1>FREE CF USER-CEPU-US-KG</h1>
+  <div class="content">
+         <h1>FREE CF USER-CEPU-US-KG</h1>
     <center><button class="button7" onclick="showPopup('sub-link')">SHOW LINK SUB</button></center>
 <div class="filters">
       <div><span class="filter-label">Items page:</span>
@@ -695,7 +694,7 @@ body {
       <div>
 <span class="filter-label">Search:</span>
 <input type="text" id="search-bar" placeholder="Search ID" />
-</div><div><select class="service-selector">
+</div><div>WildCard:<select class="service-selector">
           <option value="">NO WILDCARD</option>
           <option value="business.blibli.com">business.blibli.com</option>          
           <option value="ava.game.naver.com">ava.game.naver.com</option>
