--- a/tes.html
+++ b/tes.html
@@ -679,7 +679,7 @@ body {
   <header>
   
     </header>
-  <div class="content">
+  <main class="content">
          <h1>FREE CF USER-CEPU-US-KG</h1>
     <center><button class="button7" onclick="showPopup('sub-link')">SHOW LINK SUB</button></center>
 <div class="filters">
@@ -730,7 +730,7 @@ body {
    <div class="filtered-proxy" id="filtered-proxy"></div><br>
 
     <div class="pagination" id="pagination"></div>
-  </div> </div> 
+  </main>
 <div class="popup" id="sub-link">
 <div class="popup-content">
   <div class="table-container">
