--- a/tes.html
+++ b/tes.html
@@ -694,7 +694,7 @@ body {
       <div>
 <span class="filter-label">Search:</span>
 <input type="text" id="search-bar" placeholder="Search ID" />
-</div><div>WildCard:<select class="service-selector">
+</div><div><span class="filter-label">WildCard:</span><select class="service-selector" id="wildcard">
           <option value="">NO WILDCARD</option>
           <option value="business.blibli.com">business.blibli.com</option>          
           <option value="ava.game.naver.com">ava.game.naver.com</option>
