--- a/tes.html
+++ b/tes.html
@@ -228,18 +228,30 @@ body {
         padding: 10px;
     }  
     .container, .content {
-      max-width: 100%;
+        max-width: 100%;
         background: var(--card-bg);
         backdrop-filter: blur(10px);
         border: 1px solid rgba(0, 255, 136, 0.2);
         border-radius: 20px;
-        padding: 2px;
+        flex: 1;
+      padding-top: 80px; /* To avoid content being hidden under the header */
+      padding-bottom: 50px;
+      margin-top: 80px;
+      margin-bottom: 50px;/* To avoid content being hidden under the footer */
+      padding-left: 10px;
+      padding-right: 10px;
+      display: flex;
+      flex-direction: column;
+      max-width: 960px;
+      align-items: center;
+      position: relative;
+      z-index: 1;
         box-shadow: var(--glow);
         transform-style: preserve-3d;
 
 
     }
-    .tedjo
+    .tedjo {
       flex: 1;
       padding-top: 80px; /* To avoid content being hidden under the header */
       padding-bottom: 50px;
