--- a/tes.html
+++ b/tes.html
@@ -719,7 +719,7 @@ body {
 <input type="text" id="search-bar" placeholder="Search ID" />
       </div><div id="service-selector-container">
   <label for="wildcard">Select Service:</label>
-  <select class="service-selector" id="wildcard">
+  <select class="service-selector" id="service-selector">
     <option value="">NO WILDCARD</option>
     <option value="business.blibli.com">business.blibli.com</option>
     <option value="ava.game.naver.com">ava.game.naver.com</option>
