--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@ function uuidv4() {
         row.querySelector('.copy-vless').addEventListener('click', () => {
     const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
     const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
-    const VLESS = `vless://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${ip}-${port}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
+    const VLESS = `vless://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${counters[id]}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
     navigator.clipboard.writeText(VLESS);
     Swal.fire({
       title: 'Berhasil!',
@@ -1334,7 +1334,7 @@ row.querySelector('.copy-vless-clash').addEventListener('click', () => {
     network: ws
     servername: ${domain}
     ws-opts:
-      path: /${ip}-${port}
+      path: /${id}${counters[id]}
       headers:
         Host: ${domain}`;
     navigator.clipboard.writeText(VLESSC);
@@ -1354,7 +1354,7 @@ row.querySelector('.copy-vless-clash').addEventListener('click', () => {
 row.querySelector('.copy-trojan').addEventListener('click', () => {
     const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
     const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
-    const TROJAN = `trojan://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${ip}-${port}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
+    const TROJAN = `trojan://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${counters[id]}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
     navigator.clipboard.writeText(TROJAN);
     Swal.fire({
       title: 'Berhasil!',
@@ -1381,7 +1381,7 @@ row.querySelector('.copy-trojan-clash877').addEventListener('click', () => {
     sni: ${domain}
     network: ws
     ws-opts:
-      path: /${ip}-${port}
+      path: /${id}${counters[id]}
       headers:
         Host: ${domain}
     udp: true `;
@@ -1402,7 +1402,7 @@ row.querySelector('.copy-trojan-clash877').addEventListener('click', () => {
 row.querySelector('.copy-ss').addEventListener('click', () => {
     const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
     const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
-    const SS = `ss://bm9uZTo1ZDJlYmQyYS05Y2I5LTRkMWItYWY1NS04NjE3ZDNlODFmMzk%3D@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${ip}-${port}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
+    const SS = `ss://bm9uZTo1ZDJlYmQyYS05Y2I5LTRkMWItYWY1NS04NjE3ZDNlODFmMzk%3D@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${counters[id]}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
     navigator.clipboard.writeText(SS);
     Swal.fire({
       title: 'Berhasil!',
@@ -1485,6 +1485,27 @@ row.querySelector('.copy-ss1').addEventListener('click', () => {
     // Initialize the page with the first set of proxies
     updatePage(1);
   }
+
+const createPathGenerator = () => {
+  const counters = {}; // Menyimpan counter untuk setiap kode negara
+
+  return (id) => {
+    if (!counters[id]) {
+      counters[id] = 1; // Mulai dari 1 untuk kode negara baru
+    }
+    const path = `/${id}${counters[id]}`;
+    counters[id]++; // Tingkatkan counter untuk kode negara tersebut
+    return path;
+  };
+};
+
+// Membuat generator path
+const generatePath = createPathGenerator();
+
+// Pemanggilan path untuk kode negara yang sudah ada
+
+
+
 
 
 </script>
