--- a/index.html
+++ b/index.html
@@ -1309,9 +1309,7 @@ function uuidv4() {
 
 proxyList.appendChild(row); // Ensure this line is present to add the row to the list
 
-const counters = {}; // Menyimpan counter untuk setiap kode negara
-
-// Fungsi untuk mendapatkan atau meningkatkan counter (cons) berdasarkan kode negara (id)
+// Inisialisasi counter untuk melacak berapa kali kode negara digunakan
 const counters = {};
 
 // Fungsi untuk mendapatkan dan meningkatkan counter untuk kode negara tertentu (id)
