--- a/index.html
+++ b/index.html
@@ -1309,32 +1309,34 @@ function uuidv4() {
 
 proxyList.appendChild(row); // Ensure this line is present to add the row to the list
 
-// Inisialisasi counter untuk melacak berapa kali kode negara digunakan
-const counters = {};
+const counters = {}; // Menyimpan counter untuk setiap kode negara
 
-// Fungsi untuk mendapatkan dan meningkatkan counter untuk kode negara tertentu (id)
+// Fungsi untuk mendapatkan atau meningkatkan counter (cons) berdasarkan kode negara (id)
 const getCons = (id) => {
-  // Jika kode negara belum ada, inisialisasi counter menjadi 1
   if (!counters[id]) {
-    counters[id] = 1;
+    counters[id] = 1; // Mulai dari 1 untuk kode negara baru
   } else {
-    counters[id]++; // Jika sudah ada, tingkatkan counter
+    counters[id]++; // Tingkatkan counter untuk id yang sudah ada
   }
   return counters[id]; // Kembalikan nilai counter saat ini
 };
 
+// Fungsi untuk menangani tombol copy VLESS
 row.querySelector('.copy-vless').addEventListener('click', () => {
-  const cons = getCons(id); // Mengambil nilai cons berdasarkan id
+  const id = row.querySelector('.id-selector').value; // Mengambil id negara
+  const cons = getCons(id); // Mendapatkan nilai counter untuk id negara
   const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
   const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
+
+  // Membuat URL VLESS dengan format yang benar
   const VLESS = `vless://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${cons}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
-  navigator.clipboard.writeText(VLESS);
+  navigator.clipboard.writeText(VLESS); // Menyalin ke clipboard
   Swal.fire({
     title: 'Berhasil!',
     text: 'COPY VLESS 443 SUKSES!',
     icon: 'success',
-    background: 'rgba(6, 18, 67, 0.89)', // Warna latar belakang (biru pucat)
-    color: 'red', // Warna teks
+    background: 'rgba(6, 18, 67, 0.89)',
+    color: 'red',
     customClass: {
       popup: 'rounded-popup',
     },
@@ -1342,10 +1344,14 @@ row.querySelector('.copy-vless').addEventListener('click', () => {
   });
 });
 
+// Fungsi untuk menangani tombol copy VLESS Clash
 row.querySelector('.copy-vless-clash').addEventListener('click', () => {
-  const cons = getCons(id); // Mengambil nilai cons berdasarkan id
+  const id = row.querySelector('.id-selector').value; // Mengambil id negara
+  const cons = getCons(id); // Mendapatkan nilai counter untuk id negara
   const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
   const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
+
+  // Membuat URL VLESS Clash dengan format yang benar
   const VLESSC = `- name: (${selectedService})+${id}+${isp}
     server: ${selectedService}
     port: 443
@@ -1361,13 +1367,13 @@ row.querySelector('.copy-vless-clash').addEventListener('click', () => {
       path: /${id}${cons}
       headers:
         Host: ${domain}`;
-  navigator.clipboard.writeText(VLESSC);
+  navigator.clipboard.writeText(VLESSC); // Menyalin ke clipboard
   Swal.fire({
     title: 'Berhasil!',
     text: 'COPY VLESS CLASH 443 SUKSES!',
     icon: 'success',
-    background: 'rgba(6, 18, 67, 0.89)', // Warna latar belakang (biru pucat)
-    color: 'red', // Warna teks
+    background: 'rgba(6, 18, 67, 0.89)',
+    color: 'red',
     customClass: {
       popup: 'rounded-popup',
     },
@@ -1375,18 +1381,22 @@ row.querySelector('.copy-vless-clash').addEventListener('click', () => {
   });
 });
 
+// Fungsi untuk menangani tombol copy Trojan
 row.querySelector('.copy-trojan').addEventListener('click', () => {
-  const cons = getCons(id); // Mengambil nilai cons berdasarkan id
+  const id = row.querySelector('.id-selector').value; // Mengambil id negara
+  const cons = getCons(id); // Mendapatkan nilai counter untuk id negara
   const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
   const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
+
+  // Membuat URL Trojan dengan format yang benar
   const TROJAN = `trojan://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${cons}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
-  navigator.clipboard.writeText(TROJAN);
+  navigator.clipboard.writeText(TROJAN); // Menyalin ke clipboard
   Swal.fire({
     title: 'Berhasil!',
     text: 'COPY TROJAN SUKSES!',
     icon: 'success',
-    background: 'rgba(6, 18, 67, 0.89)', // Warna latar belakang (biru pucat)
-    color: 'red', // Warna teks
+    background: 'rgba(6, 18, 67, 0.89)',
+    color: 'red',
     customClass: {
       popup: 'rounded-popup',
     },
@@ -1394,89 +1404,28 @@ row.querySelector('.copy-trojan').addEventListener('click', () => {
   });
 });
 
-row.querySelector('.copy-trojan-clash877').addEventListener('click', () => {
-  const cons = getCons(id); // Mengambil nilai cons berdasarkan id
-  const selectedService = row.querySelector('.service-selector').value || "xvp.bmkg.xyz";
-  const domain = selectedService === "xvp.bmkg.xyz" ? "xvp.bmkg.xyz" : `${selectedService}.xvp.bmkg.xyz`;
-  const TROJANC877 = `- name: (${selectedService})+${id}+${isp}
-    server: ${selectedService}
-    port: 443
-    type: trojan
-    password: ${uuidv4()}
-    skip-cert-verify: true
-    sni: ${domain}
-    network: ws
-    ws-opts:
-      path: /${id}${cons}
-      headers:
-        Host: ${domain}
-    udp: true `;
-  navigator.clipboard.writeText(TROJANC877);
-  Swal.fire({
-    title: 'Berhasil!',
-    text: 'COPY TROJAN CLASH SUKSES!',
-    icon: 'success',
-    background: 'rgba(6, 18, 67, 0.89)', // Warna latar belakang (biru pucat)
-    color: 'red', // Warna teks
-    customClass: {
-      popup: 'rounded-popup',
-    },
-    confirmButtonColor: '#3085d6'
-  });
-});
-
+// Fungsi untuk menangani tombol copy SS
 row.querySelector('.copy-ss').addEventListener('click', () => {
-  const cons = getCons(id); // Mengambil nilai cons berdasarkan id
+  const id = row.querySelector('.id-selector').value; // Mengambil id negara
+  const cons = getCons(id); // Mendapatkan nilai counter untuk id negara
   const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
   const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
+
+  // Membuat URL ShadowSocks dengan format yang benar
   const SS = `ss://bm9uZTo1ZDJlYmQyYS05Y2I5LTRkMWItYWY1NS04NjE3ZDNlODFmMzk%3D@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${cons}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
-  navigator.clipboard.writeText(SS);
+  navigator.clipboard.writeText(SS); // Menyalin ke clipboard
   Swal.fire({
     title: 'Berhasil!',
     text: 'COPY SHADOWSOCK SUKSES!',
     icon: 'success',
-    background: 'rgba(6, 18, 67, 0.89)', // Warna latar belakang (biru pucat)
-    color: 'red', // Warna teks
+    background: 'rgba(6, 18, 67, 0.89)',
+    color: 'red',
     customClass: {
       popup: 'rounded-popup',
     },
     confirmButtonColor: '#3085d6'
   });
 });
-
-row.querySelector('.copy-ss1').addEventListener('click', () => {
-  const cons = getCons(id); // Mengambil nilai cons berdasarkan id
-  const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
-  const domain = selectedService === "user.cepu.us.kg" ? "user.cepu.us.kg" : `${selectedService}.user.cepu.us.kg`;
-  const SS1 = `- name: (${selectedService})+${id}+${isp}
-    server: ${selectedService}
-    port: 443
-    type: ss
-    cipher: none
-    password: ${uuidv4()}
-    tls: true
-    udp: true
-    skip-cert-verify: true
-    network: ws
-    servername: ${domain}
-    ws-opts:
-      path: /${id}${cons}
-      headers:
-        Host: ${domain}`;
-  navigator.clipboard.writeText(SS1);
-  Swal.fire({
-    title: 'Berhasil!',
-    text: 'COPY SHADOWSOCK CLASH SUKSES!',
-    icon: 'success',
-    background: 'rgba(6, 18, 67, 0.89)', // Warna latar belakang (biru pucat)
-    color: 'red', // Warna teks
-    customClass: {
-      popup: 'rounded-popup',
-    },
-    confirmButtonColor: '#3085d6'
-  });
-});
-
 
         
         
