--- a/tes.html
+++ b/tes.html
@@ -1106,7 +1106,7 @@ function uuidv4() {
 }
 
   // URL untuk mendapatkan proxy list
-  fetch("https://raw.githubusercontent.com/kcepu877/proxyip/refs/heads/main/f74bjd2h2ko99f3j5")
+  fetch("https://cf.cepu.us.kg/update_proxyip.txt")
     .then(response => response.text())
     .then(data => {
       const allProxies = data.split("\n").filter(line => line.trim() !== "");
