--- a/tes.html
+++ b/tes.html
@@ -1257,9 +1257,11 @@ function uuidv4() {
       » ISP         : ${isp}<br>
       » Country     :${id}&nbsp;<span class="flag-icon flag-icon-${id.toLowerCase()}"></span><br>
       » IP:PORT      : ${ip}:${port}<br>
-      <hr/>VLESS<br>
+      <hr/>VLESS PATH SIMPLE<br>
+      PATH: /${id}${cons}<br>
       <button class="copy-vless">COPY VLESS 443</button>
-      <br><button class="copy-vless-clash">COPY CLASH 443</button>
+      <br><hr/>VLESS PATH RIBET<br>
+      PATH: /${ip}:${port}<br><button class="copy-vless-clash">COPY CLASH 443</button>
       <hr/>
       <button class="button8" onclick="hidePopup('vtls${ip}:${port}')">Close</button> 
 </div>
@@ -1270,9 +1272,11 @@ function uuidv4() {
       » ISP         : ${isp}<br>
       » Country     :${id}&nbsp;<span class="flag-icon flag-icon-${id.toLowerCase()}"></span><br>
       » IP:PORT      : ${ip}:${port}<br>
-      <hr/>TROJAN<br>
+      <hr/>TROJAN PATH SIMPLE<br>
+      PATH: /${id}${cons}<br>
       <button class="copy-trojan">COPY TROJAN 443</button>
-      <br><button class="copy-trojan-clash877">COPY CLASH 443</button> 
+      <br><hr/>TROJAN PATH RIBET<br>
+      PATH: /${ip}:${port}<br><button class="copy-trojan-clash877">COPY CLASH 443</button> 
       <hr/>
       <button class="button8" onclick="hidePopup('trojan${ip}:${port}')">Close</button> 
     </div>
@@ -1283,9 +1287,12 @@ function uuidv4() {
       » ISP         : ${isp}<br>
       » Country     :${id}&nbsp;<span class="flag-icon flag-icon-${id.toLowerCase()}"></span><br>
       » IP:PORT      : ${ip}:${port}<br>
-      <hr/>SHADOWSOCK<br>
+      <hr/>SHADOWSOCK PATH SIMPLE<br>
+      PATH: /${id}${cons}<br>
       <button class="copy-ss">COPY SHADOWSOCK</button>
-      <br><button class="copy-ss1">COPY CLASH</button>
+      <br><hr/>SHADOWSOCK PATH RIBET<br>
+      PATH: /${ip}:${port}<br>
+      <button class="copy-ss1">COPY CLASH</button>
      <hr/> <button class="button8" onclick="hidePopup('ss${ip}:${port}')">Close</button> 
     </div>
     </div></td>
@@ -1295,9 +1302,9 @@ function uuidv4() {
         proxyList.appendChild(row);
 
         row.querySelector('.copy-vless').addEventListener('click', () => {
-    const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
     const host = "user.cepu.us.kg";
-    const domain = selectedService === host ? host : `${selectedService}.${host}`;
+const selectedService = row.querySelector('.service-selector').value || host;
+const domain = selectedService === host ? host : `${selectedService}.${host}`;
     const VLESS = `vless://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${cons}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
     navigator.clipboard.writeText(VLESS);
     Swal.fire({
@@ -1314,25 +1321,11 @@ function uuidv4() {
 });
 
 row.querySelector('.copy-vless-clash').addEventListener('click', () => {
-    const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
     const host = "user.cepu.us.kg";
-    const domain = selectedService === host ? host : `${selectedService}.${host}`;
-    const VLESSC = `- name: (${selectedService})+${id}+${isp}
-    server: ${selectedService}
-    port: 443
-    type: vless
-    uuid: ${uuidv4()}
-    cipher: auto
-    tls: true
-    udp: true
-    skip-cert-verify: true
-    network: ws
-    servername: ${domain}
-    ws-opts:
-      path: /${id}${cons}
-      headers:
-        Host: ${domain}`;
-    navigator.clipboard.writeText(VLESSC);
+const selectedService = row.querySelector('.service-selector').value || host;
+const domain = selectedService === host ? host : `${selectedService}.${host}`;
+    const VLESSC = `vless://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${ip}:${port}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
+  navigator.clipboard.writeText(VLESSC);
     Swal.fire({
       title: 'Berhasil!',
       text: 'COPY VLESS CLASH 443 SUKSES!',
@@ -1347,9 +1340,9 @@ row.querySelector('.copy-vless-clash').addEventListener('click', () => {
 });
 
 row.querySelector('.copy-trojan').addEventListener('click', () => {
-    const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
     const host = "user.cepu.us.kg";
-    const domain = selectedService === host ? host : `${selectedService}.${host}`;
+const selectedService = row.querySelector('.service-selector').value || host;
+const domain = selectedService === host ? host : `${selectedService}.${host}`;
     const TROJAN = `trojan://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${cons}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
     navigator.clipboard.writeText(TROJAN);
     Swal.fire({
@@ -1369,19 +1362,8 @@ row.querySelector('.copy-trojan-clash877').addEventListener('click', () => {
     const selectedService = row.querySelector('.service-selector').value || "xvp.bmkg.xyz";
     const host = "user.cepu.us.kg";
     const domain = selectedService === host ? host : `${selectedService}.${host}`;
-    const TROJANC877 = `- name: (${selectedService})+${id}+${isp}
-    server: ${selectedService}
-    port: 443
-    type: trojan
-    password: ${uuidv4()}
-    skip-cert-verify: true
-    sni: ${domain}
-    network: ws
-    ws-opts:
-      path: /${id}${cons}
-      headers:
-        Host: ${domain}
-    udp: true `;
+    const TROJANC877 = `trojan://${uuidv4()}@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${ip}:${port}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
+    
     navigator.clipboard.writeText(TROJANC877);
     Swal.fire({
       title: 'Berhasil!',
@@ -1397,9 +1379,9 @@ row.querySelector('.copy-trojan-clash877').addEventListener('click', () => {
 });
 
 row.querySelector('.copy-ss').addEventListener('click', () => {
-    const selectedService = row.querySelector('.service-selector').value || "user.cepu.us.kg";
     const host = "user.cepu.us.kg";
-    const domain = selectedService === host ? host : `${selectedService}.${host}`;
+const selectedService = row.querySelector('.service-selector').value || host;
+const domain = selectedService === host ? host : `${selectedService}.${host}`;
     const SS = `ss://bm9uZTo1ZDJlYmQyYS05Y2I5LTRkMWItYWY1NS04NjE3ZDNlODFmMzk%3D@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${id}${cons}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
     navigator.clipboard.writeText(SS);
     Swal.fire({
@@ -1416,18 +1398,21 @@ row.querySelector('.copy-ss').addEventListener('click', () => {
 });
 
 row.querySelector('.copy-ss1').addEventListener('click', () => {
-    const SS1 = `087861167414`;
+    const host = "user.cepu.us.kg";
+const selectedService = row.querySelector('.service-selector').value || host;
+const domain = selectedService === host ? host : `${selectedService}.${host}`;
+    const SS1 = `ss://bm9uZTo1ZDJlYmQyYS05Y2I5LTRkMWItYWY1NS04NjE3ZDNlODFmMzk%3D@${selectedService}:443?encryption=none&type=ws&host=${domain}&path=%2F${ip}:${port}&security=tls&sni=${domain}#(${selectedService})+${id}+${isp}`;
     navigator.clipboard.writeText(SS1);
     Swal.fire({
-      title: 'Perhatian!',
-      text: 'SHADOWSOCK VERSI CLASH BELUM TERSEDIA',
-      icon: 'warning',
+      title: 'Berhasil!',
+      text: 'COPY SHADOWSOCK SUKSES!',
+      icon: 'success',
       background: 'rgba(6, 18, 67, 0.89)', // Warna latar belakang (biru pucat)
       color: 'red', // Warna teks
       customClass: {
         popup: 'rounded-popup',
       },
-      confirmButtonColor: '#f39c12'
+      confirmButtonColor: '#3085d6'
     });
 });
         
